# ChangeLog for app-text/sphinxcontrib-ansi
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Apr 2012; James Rowe <jnrowe@gmail.com> sphinxcontrib-ansi-0.6.ebuild:
  Switched to python-distutils-ng eclass.

  19 Mar 2012; James Rowe <jnrowe@gmail.com> sphinxcontrib-ansi-0.6.ebuild:
  Switched to EAPI4.

  14 Mar 2012; James Rowe <jnrowe@gmail.com> sphinxcontrib-ansi-0.6.ebuild:
  Use ${PN} in ${HOMEPAGE}.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> sphinxcontrib-ansi-0.6.ebuild:
  Removed Python 2.4 support.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  08 Aug 2011; James Rowe <jnrowe@gmail.com> -sphinxcontrib-ansi-0.5.1.ebuild,
  sphinxcontrib-ansi-0.6.ebuild:
  Keyworded x86.

  08 Aug 2011; James Rowe <jnrowe@gmail.com> sphinxcontrib-ansi-0.6.ebuild:
  Keyworded amd64.

  01 Aug 2011; James Rowe <jnrowe@gmail.com> sphinxcontrib-ansi-0.5.1.ebuild:
  Keyworded x86.

  30 Jul 2011; James Rowe <jnrowe@gmail.com> sphinxcontrib-ansi-0.5.1.ebuild:
  Keyworded amd64.

*sphinxcontrib-ansi-0.6 (09 Jul 2011)

  09 Jul 2011; James Rowe <jnrowe@gmail.com> +sphinxcontrib-ansi-0.6.ebuild:
  Version bump [427].

  02 Jul 2011; James Rowe <jnrowe@gmail.com> sphinxcontrib-ansi-0.5.1.ebuild:
  Keyworded ~x86.

  30 Jun 2011; James Rowe <jnrowe@gmail.com> sphinxcontrib-ansi-0.5.1.ebuild:
  Remove duplication in PYTHON_MODNAME.

  30 Jun 2011; James Rowe <jnrowe@gmail.com> sphinxcontrib-ansi-0.5.1.ebuild:
  Fixed bytecode generation.

*sphinxcontrib-ansi-0.5.1 (30 Jun 2011)

  30 Jun 2011; James Rowe <jnrowe@gmail.com> +sphinxcontrib-ansi-0.5.1.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [390].
